# MSL-Safe-Web-Lockdown-Browser-core

browser/: BUILD.gn  brave_browser_process_impl.cc  brave_content_browser_client.cc
browser/ui/views/frame/: brave_browser_view.cc
browser/ui/views/toolbar/: brave_toolbar_view.cc
chromium_src/chrome/browser/renderer_context_menu/: render_view_context_menu.cc
components/ai_chat/core/common/buildflags/: buildflags.gni
components/brave_ads/buildflags/: buildflags.gni
components/brave_news/common/buildflags/: buildflags.gni
components/brave_rewards/core/buildflags/: buildflags.gni
components/brave_vpn/common/buildflags/: buildflags.gni
components/brave_wallet/common/buildflags/: buildflags.gni
components/lockdown_browser/: BUILD.gn
components/lockdown_browser/browser/: firebase_service.cc  firebase_service.h  lockdown_browser_view.cc  lockdown_browser_view.h  lockdown_manager.cc  lockdown_manager.h  lockdown_navigation_throttle.cc  lockdown_navigation_throttle.h
components/lockdown_browser/ui/webui/: lockdown_ui.cc  lockdown_ui.h
