# Copyright (c) 2024 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

source_set("lockdown_browser") {
  sources = [
    "browser/lockdown_manager.cc",
    "browser/lockdown_manager.h",
    "browser/firebase_service.cc",
    "browser/firebase_service.h",
    "ui/webui/lockdown_ui.cc",
    "ui/webui/lockdown_ui.h",
    "browser/lockdown_browser_view.cc",
    "browser/lockdown_browser_view.h",
    "browser/lockdown_navigation_throttle.cc",
    "browser/lockdown_navigation_throttle.h",
  ]

  deps = [
    "//base",
    "//content/public/browser",
    "//crypto",
    "//ui/views",
    "//url",
    "//services/network/public/cpp",
  ]
}
